# distil-gitara

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
finetuning/: README.md
finetuning/data/: config.yaml  job_description.json  test.jsonl  train.jsonl
finetuning/synthetic-data/: test.jsonl  train.jsonl
src/gitara/: cli.py  model_client.py  renderer.py
tests/: test_renderer.py
